fix: shorten the bad word filter name

--- a/code-samples/eventing/bookstore-sample-app/solution/sequence/config/100-create-sequence.yaml
+++ b/code-samples/eventing/bookstore-sample-app/solution/sequence/config/100-create-sequence.yaml
@@ -10,7 +10,7 @@ spec:
     - ref: # This is the first step of the sequence, it will send the event to the inappropriate-language-filter service
         apiVersion: serving.knative.dev/v1
         kind: Service
-        name: inappropriate-language-filter
+        name: bad-word-filter
     - ref: # This is the second step of the sequence, it will send the event to the sentiment-analysis-app service
         apiVersion: serving.knative.dev/v1
         kind: Service
