--- a/code-samples/eventing/bookstore-sample-app/solution/sequence/config/100-create-sequence.yaml
+++ b/code-samples/eventing/bookstore-sample-app/solution/sequence/config/100-create-sequence.yaml
@@ -7,7 +7,7 @@ spec:
     apiVersion: messaging.knative.dev/v1
     kind: InMemoryChannel
   steps:
-    - ref: # This is the first step of the sequence, it will send the event to the inappropriate-language-filter service
+    - ref: # This is the first step of the sequence, it will send the event to the bad-word-filter service
         apiVersion: serving.knative.dev/v1
         kind: Service
         name: bad-word-filter
